--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background: url(backgroundImg4.jpg) no-repeat center center fixed;
+  background: url(photos/backgroundImg4.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
