--- a/client/partials/roomOptions.html
+++ b/client/partials/roomOptions.html
@@ -1,22 +1,35 @@
-<script>
-    function equalHeight(group) {
-        var tallest = 0;
-        group.each(function() {
-            var thisHeight = $(this).height();
-            console.log('thisHeight = ', thisHeight);
-            if (thisHeight > tallest) {
-                tallest = thisHeight;
-            }
-        });
-        group.each(function() {
-            $(this).height(tallest + 50);
-        });
-    }
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="">Link</a></li>
+            </ul>
 
-    jQuery(document).ready(function() {
-        equalHeight(jQuery(".caption"));
-    });
-</script>
+            <ul class="nav navbar-nav navbar-right">
+<!-- currency convert selection -->
+                  <div class=" currencySelection">
+                    <select ng-model="fromType" class="form-control" required
+                            data-ng-change="forExConvert(fromType)"
+                            style="display: inline-block"
+                            ng-options="key for (key, value) in rates track by value">
+                      <option value="">USD -- Select Currency --</option>
+                    </select>
+                  </div>
+<!-- End of currency convert selection -->
+            </ul>
+        </div>
+    </div><!-- /.container-fluid -->
+</nav>
 
 
   <div class="wrap" ng-repeat="room in roomData " ng-hide="$last">
@@ -26,9 +39,8 @@
               <div class="caption">
                   <h4>{{ room.short_desc }}</h4>
                   <p class="long_desc">{{ room.long_desc }}</p>
-
                     <div class="">
-                      <h5 ng-hide="fromType">Price: {{ room.room_price }} /Night (USD) </h5>
+                      <h5 ng-hide="fromType">Price: {{ room.room_price * (selectedCurrencyRate || 1 ) }} /Night (USD) </h5>
                       <h5 ng-show="fromType">Price: {{ room.room_price * fromType | number: 2}} /Night ({{ currency }}) </h5>
                     </div>
                   <a type="button"  class="btn btn-primary " data-toggle="modal" data-target="#guestInfoModal" ng-click="bookRoom(room)">Book Room</a>
